--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
         <link href="css/styles.css" rel="stylesheet" type="text/css">
+        <title>Akan name</title>
     </head>
     <body>
+        <h1>Hello, welcome</h1>
         <script href="js/index.js"></script>
     </body>
 </html>
