--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <body>
         <h1>Hello, welcome</h1>
         <script href="js/index.js"></script>
+        <form name="myform" action="" method="get">
+            <label for="">Enter your birth date</label><br>
+            <input type="date" name="birth date"><br>
+            <button type="submit">Submit</button>
+        </form>
     </body>
 </html>
