added a gender option

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
             <input type="date" name="birth date"><br>
             <button type="submit">Submit</button>
         </form>
+        <label for="male">
+            <input type="radio" name="gender" value="M">Male
+        </label>
+        <label for="female">
+            <input type="radio" name="gender" value="F">Female
+        </label>
     </body>
 </html>
