--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <p>Welcome, this web application uses birth date to calculate the day of the week one was born and then basing on the gender,finds the Akan name  of the person. <br>
                 Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. <a href="https://fairafric.com/let-the-name-speak-the-deep-meaning-of-ghanaian-first-names">Learn more</a></p>
             <p>Fill out the form to find out your Akan name:</p>
-            <form name="myform" action="" method="get" onsubmit="return akanName()">
+            <div>
                 <p><label for="">Birth Day:</label>
                     <input id="day" type="number" name="day" value="" required></p>
                 <p><label for="">Birth Month:</label>
@@ -22,10 +22,10 @@
                     <input type="radio" id="male" name="gender" value="M">Male
                     <input type="radio" id="female" name="gender" value="F">Female
                 </label>
-                <p><input id="akan-name" type="submit" name="" value="Akan name"></p>
-            </form>
+                <p><button id="akan-name" type="button" onclick="akanName()">Akan Name</button></p>
+            </div>
             <p id="akan"></p>
         </div>
-        <script href="js/index.js"></script>
+        <script src="js/index.js"></script>
     </body>
 </html>
